--- a/.github/workflows/hello-world.yaml
+++ b/.github/workflows/hello-world.yaml
@@ -4,7 +4,9 @@ jobs:
   hello-world:
     runs-on: ubuntu-latest
     steps:
-      - name: Hello World Step
-        run: echo "Hello, World!"
-      - name: Say Hello Again
-        run: echo "Hello again, World!"
+      - name: Cloning repository
+        run: |
+          echo "Cloning the repository..."
+          echo "Github context: ${{ toJson(github) }}"
+          git clone https://github.com/${{github.repository}}/gha-cicd-pipeline-demo.git myfolder
+          cd myfolder && ls -la
