--- a/.github/workflows/hello-world.yaml
+++ b/.github/workflows/hello-world.yaml
@@ -5,8 +5,4 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Cloning repository
-        run: |
-          echo "Cloning the repository..."
-          echo "Github context: ${{ toJson(github) }}"
-          git clone https://github.com/${{github.repository}}.git myfolder
-          cd myfolder && ls -la
+        uses: actions/checkout@v6
