--- a/.github/workflows/deploy-dist-folder.yaml
+++ b/.github/workflows/deploy-dist-folder.yaml
@@ -19,6 +19,7 @@ jobs:
       - name: Job is completed
         run: echo "Job is completed successfully!"
   build:
+    needs: test
     runs-on: ubuntu-latest
     steps:
       - name: Cloning repository
@@ -31,3 +32,10 @@ jobs:
         run: npm install
       - name: Build project
         run: npm run build
+  deploy:
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+      - name: Cloning repository
+        uses: actions/checkout@v6
+     
