--- a/.github/workflows/deploy-dist-folder.yaml
+++ b/.github/workflows/deploy-dist-folder.yaml
@@ -9,15 +9,17 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v6
         with:
-          node-version: '22'
-      - name: Print node version
-        run: node -v
+          node-version: '22'          
+      - name: Cache node modules
+        uses: actions/cache@v3
+        with:
+          path: node_modules
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
       - name: Install dependencies
+        if: steps.cache.outputs.cache-hit != 'true'
         run: npm install
       - name: Run tests
-        run: npm test
-      - name: Job is completed
-        run: echo "Job is completed successfully!"
+        run: npm test      
   build:
     needs: test
     runs-on: ubuntu-latest
@@ -28,7 +30,13 @@ jobs:
         uses: actions/setup-node@v6
         with:
           node-version: '22'
+      - name: Cache node modules
+        uses: actions/cache@v3
+        with:
+          path: node_modules
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
       - name: Install dependencies
+        if: steps.cache.outputs.cache-hit != 'true'
         run: npm install
       - name: Build project
         run: npm run build
