added ignore path

--- a/.github/workflows/deploy-dist-folder.yaml
+++ b/.github/workflows/deploy-dist-folder.yaml
@@ -1,5 +1,10 @@
 name: Run test
-on: [push, workflow_dispatch]
+on: 
+  push:
+    branches: [main] 
+    paths-ignore:
+      - ".github/workflows/**"
+  workflow_dispatch:     
 jobs:
   test:
     runs-on: ubuntu-latest
