--- a/.github/action/setupnode/action.yaml
+++ b/.github/action/setupnode/action.yaml
@@ -1,12 +1,17 @@
 name: Setup Node js and instal its dependencies
 description: This action sets up Node.js and installs its dependencies.
+inputs:
+  node-version:
+    description: 'The version of Node.js to use'
+    required: false
+    default: '22'
 runs:
   using: "composite"
   steps:    
     - name: Setup Node.js
       uses: actions/setup-node@v6
       with:
-        node-version: '22'
+        node-version: ${{ inputs.node-version }}
     - name: Cache node modules
       uses: actions/cache@v3
       with:
