--- a/.github/workflows/deploy-dist-folder.yaml
+++ b/.github/workflows/deploy-dist-folder.yaml
@@ -13,6 +13,8 @@ jobs:
         uses: actions/checkout@v6
       - name: Setup Node.js and install dependencies
         uses: ./.github/action/setupnode
+        with:
+          node-version: 20
       - name: Run tests
         run: npm test      
   build:
