--- a/.github/workflows/deploy-dist-folder.yaml
+++ b/.github/workflows/deploy-dist-folder.yaml
@@ -27,10 +27,23 @@ jobs:
         uses: ./.github/action/setupnode
       - name: Build project
         run: npm run build
+      - name: Upload dist folder
+        uses: actions/upload-artifact@v4
+        with:
+          name: dist-folder
+          path: dist
   deploy:
     needs: build
     runs-on: ubuntu-latest
     steps:
-      - name: Cloning repository
-        uses: actions/checkout@v6
+      - name: Download the dist folder
+        uses: actions/download-artifact@v4
+        with:
+          name: dist-folder
+          path: dist
+      - name: Deploying dist folder
+        run: |
+          echo "Deploying dist folder..."
+          ls dist/
+          echo "Deployment successful!"
      
