--- a/.github/workflows/deplot-to-github-pages.yaml
+++ b/.github/workflows/deplot-to-github-pages.yaml
@@ -1,9 +1,9 @@
-name: Run test
+name: Deploy react app to github pages
 on: 
-  # push:
-  #   branches: [main] 
-  #   paths-ignore:
-  #     - ".github/workflows/**"
+  push:
+    branches: [main] 
+    paths-ignore:
+      - ".github/workflows/**"
   workflow_dispatch:     
 jobs:
   test:
@@ -33,17 +33,26 @@ jobs:
           name: dist-folder
           path: dist
   deploy:
-    needs: build
+    # Specify runner + deployment step
     runs-on: ubuntu-latest
+    # Add a dependency to the build job
+    needs: build
+
+    # Grant GITHUB_TOKEN the permissions required to make a Pages deployment
+    permissions:
+      pages: write      # to deploy to Pages
+      id-token: write   # to verify the deployment originates from an appropriate source
+
+    # Deploy to the github-pages environment
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+
+    
     steps:
-      - name: Download the dist folder
-        uses: actions/download-artifact@v4
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4 # or specific "vX.X.X" version tag for this action
         with:
-          name: dist-folder
-          path: dist
-      - name: Deploying dist folder
-        run: |
-          echo "Deploying dist folder..."
-          ls dist/
-          echo "Deployment successful!"
+          token: ${{ secrets.GITHUB_TOKEN }}
      
